--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spider-Man | Multiversos</title>
+
+    <link rel="stylesheet" href="/assets/styles/home-page.css">
 </head>
 <body>
     <nav class="s-menu">
@@ -14,7 +16,7 @@
             <li class="s-menu__item">
                 <a href="#">Tobey Maguire</a>
             </li>
-            <li class="menu__icon">
+            <li class="s-menu__item s-menu__icon">
                 <img src="./assets/images/icons/spider.svg" alt="Spider icon">
             </li>
             <li class="s-menu__item">
