--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-bt">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,9 +29,25 @@
     </nav>
 
     <div class="s-container">
+        <a href="#" class="s-card">
+            <img class="s-card__background" src="./assets/images/pic-sm-bg-01.jpg" >
+            <img class="s-card__image" src="./assets/images/spider-man-01.png" alt="Tobey Maguire">
+            <h2 class="s-card__title">Tobey Maguire</h2>
+        </a>
 
-    
+        <a href="#" class="s-card">
+            <img class="s-card__background" src="./assets/images/pic-sm-bg-02.jpg" >
+            <img class="s-card__image" src="./assets/images/spider-man-02.png" alt="Tom Holland">
+            <h2 class="s-card__title">Tom Holland</h2>
+            </a>
+
+        <a href="#" class="s-card">
+            <img class="s-card__background" src="./assets/images/pic-sm-bg-03.jpg" >
+            <img class="s-card__image" src="./assets/images/spider-man-03.png" alt="Andrew Garfield">
+            <h2 class="s-card__title">Andrew Garfield</h2>
+            </a>
     </div>
 
+       
 </body>
 </html>
