--- a/assets/pages/tobey-maguire/spiderman1.html
+++ b/assets/pages/tobey-maguire/spiderman1.html
@@ -11,9 +11,15 @@
     <div class="s-wrapper">
 
         <div class="s-left-column">
+            
             <nav class="navigator">
+                <div class="navigator__icon">
+                    <a href="/index.html">
+                        <img src="../../images/icons/spiderman1.png">
+                    </a>
+                </div>
                 <ul>
-                    <li><a href="#01">01</a></li>
+                    <li><a href="#01">01</a></li>                     
                     <li><a href="#02">02</a></li>
                     <li><a href="#03">03</a></li>
                 </ul>
