estilizando a div logo da pagina interna

--- a/assets/pages/tobey-maguire/spiderman1.html
+++ b/assets/pages/tobey-maguire/spiderman1.html
@@ -28,7 +28,15 @@
 
         </div>
         <div class="s-main-content">
+            <div class="s-main-content__top">
+                <div class="s-logo">
+                    <img src="../../images/spiderman-tobey/movie-01/logo.png" alt="Spiderman 2002" title="Spider-Man 2002">
+                </div>
 
+            </div>
+            <div class="s-main-content__bottom">
+
+            </div>
         </div>
 
     </div>
