--- a/assets/pages/tobey-maguire/spiderman1.html
+++ b/assets/pages/tobey-maguire/spiderman1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,12 @@
 
     <link rel="stylesheet" href="../../styles/internal.css">
 </head>
+
 <body>
     <div class="s-wrapper">
 
         <div class="s-left-column">
-            
+
             <nav class="navigator">
                 <div class="navigator__icon">
                     <a href="/index.html">
@@ -19,7 +21,7 @@
                     </a>
                 </div>
                 <ul>
-                    <li><a href="#01">01</a></li>                     
+                    <li><a href="#01">01</a></li>
                     <li><a href="#02">02</a></li>
                     <li><a href="#03">03</a></li>
                 </ul>
@@ -30,9 +32,23 @@
         <div class="s-main-content">
             <div class="s-main-content__top">
                 <div class="s-logo">
-                    <img src="../../images/spiderman-tobey/movie-01/logo.png" alt="Spiderman 2002" title="Spider-Man 2002">
+                    <img src="../../images/spiderman-tobey/movie-01/logo.png" alt="Spiderman 2002"
+                        title="Spider-Man 2002">
                 </div>
 
+                <div class="s-description">
+                    <div class="pills">
+                        <ul>
+                            <li>Ano: 2002</li>
+                            <li>Diretor: Sam Raimi</li>
+                        </ul>
+                    </div>
+
+                    <div class="s-description__text">
+                        <p><strong>Sinopse:</strong>&nbsp; Depois de ser picado por uma aranha geneticamente modificada em uma demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém, ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico Duende Verde.</p>
+
+                    </div>
+                </div>
             </div>
             <div class="s-main-content__bottom">
 
@@ -40,6 +56,7 @@
         </div>
 
     </div>
-    
+
 </body>
+
 </html>
