definindo o background da pagina, e adicionando a lib fancybox

--- a/assets/pages/tobey-maguire/spiderman1.html
+++ b/assets/pages/tobey-maguire/spiderman1.html
@@ -7,6 +7,7 @@
     <title>Multiverso | Spider-Man</title>
 
     <link rel="stylesheet" href="../../styles/internal.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
 
 
         </div>
-        <div class="s-main-content">
+        <div class="s-main-content s-spiderman-01-01">
             <div class="s-main-content__top">
                 <div class="s-logo">
                     <img src="../../images/spiderman-tobey/movie-01/logo.png" alt="Spiderman 2002"
@@ -72,17 +73,17 @@
                 <div class="gallery">
                     <ul>
                         <li>
-                            <a href="#">
+                            <a data-fancybox href="../../images/spiderman-tobey/movie-01/gallery/image-01-full.jpg">
                                 <img src="../../images/spiderman-tobey/movie-01/gallery/image-01.png" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a data-fancybox href="../../images/spiderman-tobey/movie-01/gallery/image-02-full.jpg">
                                 <img src="../../images/spiderman-tobey/movie-01/gallery/image-02.png" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a data-fancybox href="../../images/spiderman-tobey/movie-01/gallery/image-03-full.jpg">
                                 <img src="../../images/spiderman-tobey/movie-01/gallery/image-03.png" alt="">
                             </a>
                         </li>
@@ -97,6 +98,10 @@
 
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <script>
+        
+    </script>
 </body>
 
 </html>
