--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="/">Página Inicial</a>
             </li>
             <li class="s-menu__item">
-                <a href="#">Tobey Maguire</a>
+                <a href="./assets/pages/tobey-maguire/spiderman1.html">Tobey Maguire</a>
             </li>
             <li class="s-menu__item s-menu__icon">
                 <img src="./assets/images/icons/spider.svg" alt="Spider icon">
@@ -32,7 +32,7 @@
     </nav>
 
     <div class="s-container">
-        <a href="#" class="s-card" id="spider-man-01">
+        <a href="./assets/pages/tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
             <img class="s-card__background" src="./assets/images/pic-sm-bg-01.jpg" >
             <img class="s-card__image" src="./assets/images/spider-man-01.png" alt="Tobey Maguire">
             <h2 class="s-card__title">Tobey Maguire</h2>
