personalizando botao da pagina principal

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="s-menu">
         <ul>
             <li class="s-menu__item">
-                <a href="/">Página Inicial</a>
+                <a href="./index.html">Página Inicial</a>
             </li>
             <li class="s-menu__item">
                 <a href="./assets/pages/tobey-maguire/spiderman1.html">Tobey Maguire</a>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="s-controller">
-        <div class="s-controller__button">
+        <div class="s-controller__button s-controller__button--active">
             01
         </div>
         <div class="s-controller__button">
