--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
 
     <div class="s-container">
-        <div class="s-card-carousel" style="transform: translateZ(-40vw) rotateY(0deg);">
+        <div class="s-cards-carousel" style="transform: translateZ(-40vw) rotateY(0deg);">
             <a href="./assets/pages/tobey-maguire/spiderman1.html" class="s-card" id="spider-man-01">
                 <img class="s-card__background" src="./assets/images/pic-sm-bg-01.jpg" >
                 <img class="s-card__image" src="./assets/images/spider-man-01.png" alt="Tobey Maguire">
@@ -54,13 +54,13 @@
     </div>
 
     <div class="s-controller">
-        <div class="s-controller__button s-controller__button--active">
+        <div id="1" onclick="selectCarouselItem(this)" class="s-controller__button s-controller__button--active">
             01
         </div>
-        <div class="s-controller__button">
+        <div id="2" onclick="selectCarouselItem(this)" class="s-controller__button">
             02
         </div>
-        <div class="s-controller__button">
+        <div id="3" onclick="selectCarouselItem(this)" class="s-controller__button">
             03
         </div>
         <div class="s-controller__line">
