finalizando 2 paginas do tom

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spider-Man | Multiversos</title>
 
@@ -23,7 +23,7 @@
                 <img src="./assets/images/icons/spider.svg" alt="Spider icon">
             </li>
             <li class="s-menu__item">
-                <a href="#">Tom Holland</a>
+                <a href="./assets/pages/tom-holland/spider-tom.html">Tom Holland</a>
             </li>
             <li class="s-menu__item">
                 <a href="#">Andre Garfield</a>
@@ -39,7 +39,7 @@
                 <h2 class="s-card__title">Tobey Maguire</h2>
             </a>
     
-            <a href="#" class="s-card" id="spider-man-02">
+            <a href="./assets/pages/tom-holland/spider-tom.html" class="s-card" id="spider-man-02">
                 <img class="s-card__background" src="./assets/images/pic-sm-bg-02.jpg" >
                 <img class="s-card__image" src="./assets/images/spider-man-02.png" alt="Tom Holland">
                 <h2 class="s-card__title">Tom Holland</h2>
