--- a/assets/pages/tobey-maguire/spiderman2.html
+++ b/assets/pages/tobey-maguire/spiderman2.html
@@ -30,23 +30,23 @@
 
 
         </div>
-        <div class="s-main-content s-spiderman-01-01">
+        <div class="s-main-content s-spiderman-01-02">
             <div class="s-main-content__top">
                 <div class="s-logo">
-                    <img src="../../images/spiderman-tobey/movie-01/logo.png" alt="Spiderman 2002"
-                        title="Spider-Man 2002">
+                    <img src="../../images/spiderman-tobey/movie-02/logo.png" alt="Spiderman 2004"
+                        title="Spider-Man 2004">
                 </div>
 
                 <div class="s-description">
                     <div class="pills">
                         <ul>
-                            <li>Ano: 2002</li>
+                            <li>Ano: 2004</li>
                             <li>Diretor: Sam Raimi</li>
                         </ul>
                     </div>
 
                     <div class="s-description__text">
-                        <p><strong>Sinopse:</strong>&nbsp; Depois de ser picado por uma aranha geneticamente modificada em uma demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém, ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico Duende Verde.</p>
+                        <p><strong>Sinopse:</strong>&nbsp; O Dr. Otto Octavius é transformado em Doutor Octopus quando uma falha em uma experiência de fusão nuclear resulta em uma explosão que mata sua esposa. Ele culpa o Homem-Aranha pelo acidente e deseja vingança. Enquanto isso, o alter ego do herói, Peter Parker, perde seus poderes. Para complicar as coisas, o seu melhor amigo odeia o Homem-Aranha e sua amada fica noiva.</p>
 
                     </div>
                 </div>
@@ -54,7 +54,7 @@
                 <div class="s-links">
                     <ul>
                         <li>
-                            <a href="https://www.youtube.com/watch?v=TYMMOjBUPMM" class="link-button" target="_blank">
+                            <a href="https://www.youtube.com/watch?v=3jBFwltrxJw" class="link-button" target="_blank">
                                 <span class="icon">
                                     <div class="play-icon">&nbsp;</div>
                                 </span>
@@ -73,18 +73,18 @@
                 <div class="gallery">
                     <ul>
                         <li>
-                            <a data-fancybox href="../../images/spiderman-tobey/movie-01/gallery/image-01-full.jpg">
-                                <img src="../../images/spiderman-tobey/movie-01/gallery/image-01.png" alt="">
+                            <a data-fancybox href="../../images/spiderman-tobey/movie-02/gallery/image-01.png">
+                                <img src="../../images/spiderman-tobey/movie-02/gallery/image-01.png" alt="">
                             </a>
                         </li>
                         <li>
-                            <a data-fancybox href="../../images/spiderman-tobey/movie-01/gallery/image-02-full.jpg">
-                                <img src="../../images/spiderman-tobey/movie-01/gallery/image-02.png" alt="">
+                            <a data-fancybox href="../../images/spiderman-tobey/movie-02/gallery/image-02.png">
+                                <img src="../../images/spiderman-tobey/movie-02/gallery/image-02.png" alt="">
                             </a>
                         </li>
                         <li>
-                            <a data-fancybox href="../../images/spiderman-tobey/movie-01/gallery/image-03-full.jpg">
-                                <img src="../../images/spiderman-tobey/movie-01/gallery/image-03.png" alt="">
+                            <a data-fancybox href="../../images/spiderman-tobey/movie-02/gallery/image-03.png">
+                                <img src="../../images/spiderman-tobey/movie-02/gallery/image-03.png" alt="">
                             </a>
                         </li>
                         
