--- a/assets/pages/tom-holland/spider-tom3.html
+++ b/assets/pages/tom-holland/spider-tom3.html
@@ -12,6 +12,9 @@
 
 <body>
     <div class="s-wrapper">
+        <video loop muted controls>
+            <source src="../../videos/spiderman-2002-trailer.mp4" type="video/mp4">
+        </video>
 
         <div class="s-left-column">
 
