pagina tom concluida

--- a/assets/pages/tom-holland/spider-tom3.html
+++ b/assets/pages/tom-holland/spider-tom3.html
@@ -12,44 +12,40 @@
 
 <body>
     <div class="s-wrapper">
-        <video loop muted controls>
-            <source src="../../videos/spiderman-2002-trailer.mp4" type="video/mp4">
-        </video>
-
         <div class="s-left-column">
 
             <nav class="navigator">
                 <div class="navigator__icon">
                     <a href="/index.html">
-                        <img src="../../images/icons/spiderman1.png">
+                        <img src="../../images/icons/spiderman1-tom.png">
                     </a>
                 </div>
                 <ul>
-                    <li><a href="./spiderman1.html">01</a></li>
-                    <li><a href="./spiderman2.html">02</a></li>
-                    <li><a href="./spiderman3.html">03</a></li>
+                    <li><a href="./spider-tom.html">01</a></li>
+                    <li><a href="./spider-tom2.html">02</a></li>
+                    <li><a href="./spider-tom3.html">03</a></li>
                 </ul>
             </nav>
 
 
         </div>
-        <div class="s-main-content s-spiderman-01-01">
+        <div class="s-main-content s-spiderman-02-03">
             <div class="s-main-content__top">
                 <div class="s-logo">
-                    <img src="../../images/spiderman-tobey/movie-01/logo.png" alt="Spiderman 2002"
-                        title="Spider-Man 2002">
+                    <img src="../../images/spiderman-tom/movie-03/logo.png" alt="logo Homem-Aranha: Sem Volta para Casa"
+                        title="Homem-Aranha: Sem Volta para Casa">
                 </div>
 
                 <div class="s-description">
                     <div class="pills">
                         <ul>
-                            <li>Ano: 2002</li>
-                            <li>Diretor: Sam Raimi</li>
+                            <li>Ano: 2021</li>
+                            <li>Diretor: Jon Watts</li>
                         </ul>
                     </div>
 
                     <div class="s-description__text">
-                        <p><strong>Sinopse:</strong>&nbsp; Depois de ser picado por uma aranha geneticamente modificada em uma demonstração científica, o jovem nerd Peter Parker ganha superpoderes. Inicialmente, ele pretende usá-los para para ganhar dinheiro, adotando o nome de Homem-Aranha e se apresentando em lutas de exibição. Porém, ao presenciar o assassinando de seu tio Ben e sentir-se culpado, Peter decide não mais usar seus poderes para proveito próprio e sim para enfrentar o mal, tendo como seu primeiro grande desafio o psicótico Duende Verde.</p>
+                        <p><strong>Sinopse:</strong>&nbsp; Peter Parker tem a sua identidade secreta revelada e pede ajuda ao Doutor Estranho. Quando um feitiço para reverter o evento não sai como o esperado, o Homem-Aranha e seu companheiro dos Vingadores precisam enfrentar inimigos de todo o multiverso.</p>
 
                     </div>
                 </div>
@@ -57,7 +53,7 @@
                 <div class="s-links">
                     <ul>
                         <li>
-                            <a href="https://www.youtube.com/watch?v=TYMMOjBUPMM" class="link-button" target="_blank">
+                            <a href="https://www.youtube.com/watch?v=bHzGeci_8wc" class="link-button" target="_blank">
                                 <span class="icon">
                                     <div class="play-icon">&nbsp;</div>
                                 </span>
@@ -76,18 +72,18 @@
                 <div class="gallery">
                     <ul>
                         <li>
-                            <a data-fancybox href="../../images/spiderman-tobey/movie-01/gallery/image-01-full.jpg">
-                                <img src="../../images/spiderman-tobey/movie-01/gallery/image-01.png" alt="">
+                            <a data-fancybox href="../../images/spiderman-tom/movie-03/gallery/image01.jpg">
+                                <img src="../../images/spiderman-tom/movie-03/gallery/image01.jpg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a data-fancybox href="../../images/spiderman-tobey/movie-01/gallery/image-02-full.jpg">
-                                <img src="../../images/spiderman-tobey/movie-01/gallery/image-02.png" alt="">
+                            <a data-fancybox href="../../images/spiderman-tom/movie-03/gallery/image03.jpg">
+                                <img src="../../images/spiderman-tom/movie-03/gallery/image03.jpg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a data-fancybox href="../../images/spiderman-tobey/movie-01/gallery/image-03-full.jpg">
-                                <img src="../../images/spiderman-tobey/movie-01/gallery/image-03.png" alt="">
+                            <a data-fancybox href="../../images/spiderman-tom/movie-03/gallery/image02.png">
+                                <img src="../../images/spiderman-tom/movie-03/gallery/image02.png" alt="">
                             </a>
                         </li>
                         
