--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="./assets/pages/tom-holland/spider-tom.html">Tom Holland</a>
             </li>
             <li class="s-menu__item">
-                <a href="#">Andre Garfield</a>
+                <a href="./assets/pages/andrew-garfield/spider-andrew.html">Andre Garfield</a>
             </li>            
         </ul>
     </nav>
@@ -45,7 +45,7 @@
                 <h2 class="s-card__title">Tom Holland</h2>
                 </a>
     
-            <a href="#" class="s-card" id="spider-man-03">
+            <a href="./assets/pages/andrew-garfield/spider-andrew.html" class="s-card" id="spider-man-03">
                 <img class="s-card__background" src="./assets/images/pic-sm-bg-03.jpg" >
                 <img class="s-card__image" src="./assets/images/spider-man-03.png" alt="Andrew Garfield">
                 <h2 class="s-card__title">Andrew Garfield</h2>
