adicionando favicon e git

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spider-Man | Multiversos</title>
 
+    <link rel="shortcut icon" href="./assets/images/icons/spider.svg" type="image/x-icon">
+
     <link rel="stylesheet" href="./assets/styles/home-page.css">
 
     <script src="./assets/js/engine.js"></script>
@@ -27,7 +29,12 @@
             </li>
             <li class="s-menu__item">
                 <a href="./assets/pages/andrew-garfield/spider-andrew.html">Andre Garfield</a>
-            </li>            
+            </li>
+            <li class="s-menu__item s-menu__icon">
+                <a href="https://github.com/mtsnatalino" target="_blank">
+                    <img src="./assets/images/icons/git.svg" alt="Github mtsnatalino">
+                </a>           
+            </li>           
         </ul>
     </nav>
 
